# lurii-pfm

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml
docs/: adr-027-mcp-server.md  adr-028-categorization-mcp-tools.md  adr-029-categorization-payload-and-suggestion-filter.md  adr-030-source-identity-normalization.md  adr-031-transfer-tooling-and-valuation.md  categorization-followups.md  data-sources.md  decisions.md  deployment.md  earn-metrics-research.md  implementation-plan.md  requirements.md  v2-evolution.md
scripts/: bunq_sandbox_key.py  generate_homebrew_formula_resources.py  pfm-weekly.sh  release_lurii.py
src/pfm/: __init__.py  cash_manual.py  cli.py  config.py  enums.py  logging.py  mcp_server.py  source_types.py
src/pfm/ai/: __init__.py  analyst.py  base.py  categorizer.py  commentary_parser.py  prompts.py  report_markdown_formatter.py  schemas.py  weekly_report_prompt_pack.py
src/pfm/ai/providers/: __init__.py  deepseek.py  gemini.py  grok.py  ollama.py  openai_compat.py  openrouter.py  registry.py
src/pfm/analytics/: __init__.py  categorization_runner.py  categorizer.py  flow_bridge.py  merchant.py  pnl.py  portfolio.py  rule_audit.py  rule_dryrun.py  transaction_analytics.py  transaction_grouper.py  transfer_detector.py  type_resolver.py  type_rules.py  usd_value_backfill.py  yield_tracker.py
src/pfm/collectors/: __init__.py  _auth.py  _math.py  _retry.py  base.py  binance.py  binance_th.py  bitget_wallet.py  blend.py  bunq.py  bybit.py  cash.py  coinex.py  generic.py  ibkr.py  kbank.py  lobstr.py  mexc.py  okx.py  pipeline.py  rabby.py  revolut.py  trading212.py  uphold.py  wise.py  wise_csv.py  yo.py
src/pfm/db/: __init__.py  ai_report_memory_store.py  ai_store.py  apy_rules_store.py  earn_override_store.py  encryption.py  gemini_store.py  metadata_store.py  models.py  repository.py  source_store.py  telegram_store.py
src/pfm/db/migrations/: __init__.py  env.py  runner.py
src/pfm/db/migrations/versions/: 5f3f6d1f2e11_add_snapshot_source_name.py  8d775e055451_add_app_settings_table.py  9cd516d0ab26_initial_schema.py  a1b2c3d4e5f6_add_transaction_categories.py  b2c3d4e5f6g7_add_spend_type_and_type_rules.py  b7a1c91c9d5f_add_transaction_source_name_trade_side.py  c3d4e5f6h7i8_rule_type_constraint.py  c4a2e7d6f9b1_add_snapshot_price_and_apy.py  d3f1b8a4c2e6_add_ai_providers_table.py  d4e5f6g7h8i9_redesign_category_rules.py  e5f6g7h8i9j0_simplify_categories.py  e7b9c1d4a5f0_add_raw_responses_table_if_missing.py  f2c7e6a9d1b4_dedupe_kbank_empty_tx_id_rows.py  f6g7h8i9j0k1_add_type_rules.py  g7h8i9j0k1l2_fix_kbank_tx_id_language_dupes.py  h8i9j0k1l2m3_add_source_id_columns.py  i9j0k1l2m3n4_backfill_source_id.py  j0k1l2m3n4o5_stage3_source_id_normalize.py  k1l2m3n4o5p6_drop_ai_telegram_schema.py  l2m3n4o5p6q7_clear_orphan_transfer_on_delete.py
src/pfm/pricing/: __init__.py  coingecko.py  constants.py
src/pfm/reporting/: __init__.py  formatter.py  telegram.py
src/pfm/server/: __init__.py  analytics_helper.py  app.py  client.py  connection_validation.py  daemon.py  middleware.py  migrate_db.py  price_resolver.py  run.py  scheduler.py  serializers.py  state.py  ws.py
src/pfm/server/routes/: __init__.py  ai.py  analytics.py  apy_rules.py  backfill.py  cash_manual.py  collect.py  earn.py  ext_snapshot.py  health.py  internal.py  portfolio.py  report.py  settings.py  sources.py  statement.py  transactions.py  updates.py
tests/: conftest.py  test_ai_base.py  test_ai_schemas.py  test_ai_store.py  test_analyst.py  test_apy_rules_routes.py  test_apy_rules_store.py  test_auth.py  test_bitget_wallet.py  test_bunq.py  test_bybit_collector_edge_cases.py  test_categorizer.py  test_cli.py  test_client.py  test_coinex.py  test_collect_integration.py  test_collector_base.py  test_collector_math.py  test_collectors.py  test_config.py  test_connection_validation.py  test_daemon.py  test_db.py  test_encryption.py  test_flow_bridge.py  test_formatter.py  test_homebrew_formula_resources.py  test_lobstr.py  test_logging_setup.py  test_mcp_server.py  test_merchant.py  test_metadata_store_helpers.py  test_migrate_db.py  test_pipeline.py  test_pnl.py  test_portfolio.py  test_pricing.py  test_prompts.py  test_provider_deepseek.py  test_provider_gemini.py  (+38 more)
